terraform/internetgateway.tf
# Internet Gateway for the public subnet
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name      = "igw_${var.app_name}_${terraform.workspace}"
    Terraform = true
  }
}

# Route the main VPC route table traffic through the IGW
resource "aws_route" "internet_access" {
  route_table_id         = aws_vpc.main_vpc.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}
